[tool.poetry]
name = "museu"
version = "0.1.0"
description = ""
authors = ["afonsomedeiros"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool-ruff]
extend-exclude = ['migrations']